Update Turkish and Ukrainian localization files for LyAdminBot with improved phrasing, added emojis, and enhanced command descriptions.

--- a/locales/by.yaml
+++ b/locales/by.yaml
@@ -1,154 +1,163 @@
 private:
   start: |
-    Прывітанне, <b>${name}</b>!
-    Я дапамагу табе адміністраваць групу.
-    Дадай мяне ў групу.
-    /help - Дапамога
-    <b>👨🏻‍💻 Блог распрацоўніка:</b> @LyBlog
-  btn_add: Дадаць ў групу
+    Прывітанне, <b>${name}</b>! 👋
+
+    <b>LyAdminBot</b> — твой памочнік для мадэрацыі групы.
+
+    🛡 <b>Што ўмею:</b>
+    • Лаўлю спам і рэкламу
+    • Баню ашуканцаў
+    • Чышчу падазроныя спасылкі
+
+    Дадай мяне ў групу і дай правы адміна — далей сам разбяруся.
+
+    /help — спіс каманд
+  btn_add: Дадаць у групу
 cmd:
   help: |
-    Я дапамагаю адміністраваць групы.
-    <b>Спіс каманд:</b>
-    /ping - праверыць працу бота
-    /banan - выдаць бан
-    /kick - штурхнуць
-    /del - выдаліць вестку
-    /top - топ удзельнікаў па актыўнасці
-    /top_banan - топ удзельнікаў па часе банана
-    /mystats - статыстыка ў чаце
-    /extras - Спіс extra чата
-    /lang - змяніць мову
-    <code>!welcome</code> - уключыць / адключыць прывітання
-    <code>!gif</code> - Дадаць / Выдаліць gif ў спіс прывітанняў
-    <code>!text</code> - Дадаць / Выдаліць тэкст у спіс прывітанняў
-    <code>!extra arg</code> - стварыць extra з назвай \#arg
-    <code>!json</code> - даслаць налады
-    <code>!text-reset</code> - скінуць усе тэксты прывітанняў
-    <code>!gif-reset</code> - скінуць ўсе gif прывітанняў
-    <code>!reset</code> - скінуць налады групы
-    <b>👨🏻‍💻 Блог распрацоўніка:</b> @LyBlog
-    <b>GitHub:</b> github.com/LyoSU/LyAdminBot
+    🤖 <b>LyAdminBot</b>
+
+    <b>АНТЫСПАМ:</b>
+    <code>!spam</code> — налады
+    <code>!spam on/off</code> — укл/выкл
+    <code>!spam globalban on/off</code> — глабальны бан
+
+    <b>МАДЭРАЦЫЯ:</b>
+    /banan — бан  •  /kick — кік  •  /del — выдаліць
+    /ping — статус
+
+    <b>СТАТЫСТЫКА:</b>
+    /mystats — твая стата
+    /top — топ актыўных  •  /top_banan — топ банаў
+
+    <b>ПРЫВІТАННІ:</b>
+    <code>!welcome</code> — укл/выкл
+    <code>!gif</code> / <code>!text</code> — дадаць кантэнт
+
+    <b>ІНШАЕ:</b>
+    <code>!extra назва</code> — хуткія каманды #назва
+    /extras — спіс  •  /lang — мова
   my_stats:
-    send_pm: Статыстыка адпраўлена ў ЛС
+    send_pm: Стату скінуў у асабістыя 📊
     chat: |
-      📊 Статыстыка ${name} ў чаце <b>${chatName}</b>:
-      <b>Колькасць бананаў:</b> ${banCount} 🍌
-      <b>Агульны час бана:</b> ${banTime}
-      <b>Аўтабан:</b> ${banAutoTime}
-      <b>Вестак:</b> ${messages}
-      <b>Актыў:</b> ${active}%
-      <b>Флуд:</b> ${flood}%
-      <b>Упершыню быў заўважаны:</b> ${createdAt}
+      📊 Стата ${name} у <b>${chatName}</b>:
+
+      🍌 <b>Бананаў:</b> ${banCount}
+      ⏱ <b>Усяго ў бане:</b> ${banTime}
+      🤖 <b>Аўтабан:</b> ${banAutoTime}
+
+      💬 <b>Вестак:</b> ${messages}
+      📈 <b>Актыў:</b> ${active}%
+      🌊 <b>Флуд:</b> ${flood}%
+
+      📅 <b>Тут з:</b> ${createdAt}
     error:
       blocked: |
-        <b>Памылка!</b>
-        Я не магу табе пісаць у ЛС, напішы мне для пачатку.
+        Не магу напісаць табе ў асабістыя 😅
+        Напішы мне першым, і тады паспрабуй зноў.
   top:
     info: |
-      Топ па актыўнасці ў чаце <b>${chatName}</b>:
+      🏆 Топ актыўных у <b>${chatName}</b>:
       ${top}
   top_banan:
     info: |
-      Топ 🍌 ў чаце <b>${chatName}</b>:
+      🍌 Топ па бананах у <b>${chatName}</b>:
       ${top}
     error:
-      empty: У гэтай групе пакуль ніхто не атрымліваў 🍌
+      empty: Тут яшчэ ніхто не атрымліваў 🍌
   extras:
     list: |
-      <b>extra's чата:</b>
+      📝 <b>Extra каманды:</b>
       ${extras}
     error:
       not_found: |
-        У гэтай групы няма extra.
-        Для стварэння адміністратар павінен напісаць <code>!extra</code>
+        Пакуль няма extra каманд.
+        Адмін можа стварыць: <code>!extra назва</code>
   ping:
       pong: |
-        🏓 Pong
-        <b>Адказ сервера:</b> ${sms} мс
-        <b>Адказ telegram:</b> ${tms} мс
-        <b>Бот працуе:</b> ${workTime}
+        🏓 Pong!
+        <b>Сервер:</b> ${sms} мс
+        <b>Telegram:</b> ${tms} мс
+        <b>Аптайм:</b> ${workTime}
 
         ${extra}
       delay: |
-        ❗️ <b>Бот не працавал:</b> ${delayTime}
+        ❗️ <b>Бот быў афлайн:</b> ${delayTime}
   welcome:
-    disable: Прывітання выключаны
-    enable: Прывітання ўключаны
+    disable: Прывітанні выключаны 👋
+    enable: Прывітанні ўключаны 👋
   gif:
-    push: Gif паспяхова дададзены ў спіс прывітанняў
-    pull: Gif паспяхова выдалены з спісу прывітанняў
-    reset: Спіс gif ачышчаны
+    push: Gif дададзены ✓
+    pull: Gif выдалены ✓
+    reset: Усе gif ачышчаны ✓
   text:
-    push: Тэкст паспяхова дададзены ў спіс прывітанняў
-    pull: Тэкст паспяхова выдалены з спісу прывітанняў
-    error: Памылка, тэкст не ўтрымлівае <code>%name%</code>
-    reset: Спіс тэкстаў ачышчаны
+    push: Тэкст дададзены ✓
+    pull: Тэкст выдалены ✓
+    error: Тэкст павінен утрымліваць <code>%name%</code>
+    reset: Усе тэксты ачышчаны ✓
   extra:
-    push: \#${extraName} паспяхова захавана
-    pull: \#${extraName} паспяхова выдаленае
-    max: The maximum number of extra in the message is set to <b>${maxExtra}</b>
+    push: \#${extraName} захавана ✓
+    pull: \#${extraName} выдалена ✓
+    max: Максімум extra у паведамленні — <b>${maxExtra}</b>
     error:
       not_found: |
-        <b>Ошибка!</b>
-        extra c імем \#${extraName} не знойдзена.
-        Для стварэння новай увядзіце каманду паўторна ў адказ на паведамленне.
+        \#${extraName} не знойдзена.
+        Каб стварыць — напішы каманду ў адказ на паведамленне.
   members:
     member: |
       <a href="tg://user?id=${telegram_id}">${telegram_id}</a>
       ${banTime} | a: ${active} | f: ${flood}
   spam_settings:
-    enabled: "✅ <b>Аўтаматычная праверка на спам уключана</b>"
-    disabled: "❌ <b>Аўтаматычная праверка на спам выключана</b>"
+    enabled: "✅ <b>Антыспам уключаны</b>"
+    disabled: "❌ <b>Антыспам выключаны</b>"
     allow:
-      added: "✅ <b>Дададзена правіла дазволу:</b>\n\"${rule}\""
-      error: "❌ <b>Памылка:</b> Укажыце тэкст правіла\n\n<b>Прыклад:</b> <code>!spam allow продаж курсавых</code>"
+      added: "✅ Дазволена: \"${rule}\""
+      error: "❌ Укажы тэкст правіла\n\n<b>Прыклад:</b> <code>!spam allow продаж курсавых</code>"
     deny:
-      added: "✅ <b>Дададзена правіла забароны:</b>\n\"${rule}\""
-      error: "❌ <b>Памылка:</b> Укажыце тэкст правіла\n\n<b>Прыклад:</b> <code>!spam deny рэклама заробку</code>"
+      added: "✅ Забаронена: \"${rule}\""
+      error: "❌ Укажы тэкст правіла\n\n<b>Прыклад:</b> <code>!spam deny рэклама заробку</code>"
     remove:
-      success: "✅ <b>Выдалена правіла:</b>\n\"${rule}\""
-      error: "❌ <b>Памылка:</b> Няправільны нумар правіла\n\nВыкарыстоўвайце <code>!spam</code> каб пабачыць спіс правіл"
-    clear: "✅ <b>Ачышчаны ўсе правілы</b> (было: ${count})"
+      success: "✅ Правіла выдалена: \"${rule}\""
+      error: "❌ Няправільны нумар правіла\n\nГлянь спіс: <code>!spam</code>"
+    clear: "✅ Правілы ачышчаны (было: ${count})"
     globalban:
-      enabled: "✅ <b>Глабальны бан уключаны</b>\n• Карыстальнікі, заблакіраваныя ШІ ў гэтай групе, будуць заблакіраваны ва ўсіх іншых групах\n• Карыстальнікі, заблакіраваныя ШІ ў іншых групах, будуць заблакіраваны ў гэтай групе"
-      disabled: "❌ <b>Глабальны бан выключаны</b>\n• Карыстальнікі, заблакіраваныя ШІ ў гэтай групе, НЕ будуць заблакіраваны ў іншых групах\n• Карыстальнікі, заблакіраваныя ШІ ў іншых групах, НЕ будуць заблакіраваны ў гэтай групе"
-      error: "❌ <b>Памылка:</b> Выкарыстоўвайце <code>!spam globalban on</code> або <code>!spam globalban off</code>"
+      enabled: "✅ <b>Глабальны бан уключаны</b>\nСпамеры з іншых груп таксама будуць забанены тут"
+      disabled: "❌ <b>Глабальны бан выключаны</b>\nБаны дзейнічаюць толькі ў гэтай групе"
+      error: "Выкарыстоўвай <code>!spam globalban on</code> або <code>!spam globalban off</code>"
     status:
-      title: "🛡 <b>Налады аўтаматычнай праверкі на спам</b>"
+      title: "🛡 <b>Налады антыспаму</b>"
       enabled_text: "✅ Уключана"
       disabled_text: "❌ Выключана"
-      globalban_enabled: "✅ Уключаны"
-      globalban_disabled: "❌ Выключаны"
+      globalban_enabled: "✅ Так"
+      globalban_disabled: "❌ Не"
       rules_title: "Правілы (${count}):"
       rules_empty: "Не наладжана"
-      rule_allow: "✅ Дазвол"
-      rule_deny: "❌ Забарона"
-      commands_title: "Даступныя каманды:"
+      rule_allow: "✅ Дазволіць"
+      rule_deny: "❌ Забараніць"
+      commands_title: "Каманды:"
       commands: |
-        <code>!spam on</code> - уключыць
-        <code>!spam off</code> - выключыць
-        <code>!spam globalban on</code> - уключыць глабальны бан
-        <code>!spam globalban off</code> - выключыць глабальны бан
-        <code>!spam allow тэкст</code> - дазволіць
-        <code>!spam deny тэкст</code> - забараніць
-        <code>!spam remove нумар</code> - выдаліць правіла
-        <code>!spam clear</code> - ачысціць усе правілы
-  reset: Налады былі скінутыя
+        <code>!spam on</code> — уключыць
+        <code>!spam off</code> — выключыць
+        <code>!spam globalban on/off</code> — глабальны бан
+        <code>!spam allow тэкст</code> — дазволіць
+        <code>!spam deny тэкст</code> — забараніць
+        <code>!spam remove нумар</code> — выдаліць правіла
+        <code>!spam clear</code> — ачысціць усе правілы
+  reset: Налады скінуты ✓
 settings:
     json:
-      reset: Налады былі паспяхова адноўлены з файла
+      reset: Налады адноўлены з файла ✓
 banan:
-  show: ${name} паказвает 🍌
-  suc:  ${name} атрымлівае 🍌\n<b>Час:</b> ${duration}
-  pick: ${name} пазбаўляецца 🍌\n
-  error: <b>У мяне не атрымалася выдаць 🍌</b>\n<pre>${error}</pre>
+  show: ${name} паказвае 🍌
+  suc:  ${name} атрымлівае 🍌\n<b>На:</b> ${duration}
+  pick: ${name} пазбавіўся 🍌
+  error: <b>Не атрымалася выдаць 🍌</b>\n<pre>${error}</pre>
 kick:
-  suc: ${name} атрымлівае штурхель
-  who: Каго штурхнуць?😡
-  error: <b>У мяне не атрымалася штурхнуць</b>\n<pre>${error}</pre>
+  suc: ${name} вылятае з чата 👢
+  who: Каго кікнуць? 🤔
+  error: <b>Не атрымалася кікнуць</b>\n<pre>${error}</pre>
 del:
-  error: <b>У мяне не атрымалася выдаліць вестку</b>\n<pre>${error}</pre>
+  error: <b>Не атрымалася выдаліць</b>\n<pre>${error}</pre>
 
 global_ban:
-  kicked: "Карыстальнік ${name} быў выключаны, бо ен глабальна забанены ШІ. Прычына: ${reason}"
+  kicked: "🚫 ${name} выключаны — глабальны бан. Прычына: ${reason}"
