--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,25 +1,25 @@
 private:
   start: |
-    Привет, <b>${name}</b>!
+    Йо, <b>${name}</b>! 👋
 
-    <b>LyAdminBot</b> — бот с ИИ модерацией для твоей группы.
+    <b>LyAdminBot</b> — твой помощник для модерации группы.
 
-    🤖 <b>ИИ автоматически удаляет:</b>
-    • Спам и рекламу
-    • Скам и мошенничество
-    • Подозрительные ссылки
+    🛡 <b>Что умею:</b>
+    • Ловлю спам и рекламу
+    • Баню мошенников
+    • Чищу подозрительные ссылки
 
-    Просто добавь в группу и сделай админом — всё работает автоматически.
+    Добавь меня в группу и дай права админа — дальше сам разберусь.
 
-    /help — все команды
+    /help — список команд
   btn_add: Добавить в группу
 cmd:
   help: |
     🤖 <b>LyAdminBot</b>
 
-    <b>ИИ МОДЕРАЦИЯ:</b>
-    <code>!spam</code> — настройки ИИ фильтра
-    <code>!spam on/off</code> — включить/выключить
+    <b>АНТИСПАМ:</b>
+    <code>!spam</code> — настройки
+    <code>!spam on/off</code> — вкл/выкл
     <code>!spam globalban on/off</code> — глобальный бан
     <code>!cas</code> — CAS защита
     <code>!banChannel</code> — бан каналов
@@ -29,7 +29,7 @@ cmd:
     /report или @admin — проверить на спам (в ответ)
 
     <b>СТАТИСТИКА:</b>
-    /mystats — твоя статистика
+    /mystats — твоя стата
     /top — топ активных  •  /top_banan — топ банов
 
     <b>ПРИВЕТСТВИЯ:</b>
@@ -40,212 +40,210 @@ cmd:
     <code>!extra название</code> — быстрые команды #название
     /extras — список  •  /lang — язык  •  /ping — статус
   my_stats:
-    send_pm: Статистика отправлена в ЛС
+    send_pm: Стату скинул в личку 📊
     chat: |
-      📊 Статистика ${name} в чате <b>${chatName}</b>:
+      📊 Стата ${name} в <b>${chatName}</b>:
 
-      <b>Количество бананов:</b> ${banCount} 🍌
-      <b>Общее время бана:</b> ${banTime}
-      <b>Автобан:</b> ${banAutoTime}
+      🍌 <b>Бананов:</b> ${banCount}
+      ⏱ <b>Всего в бане:</b> ${banTime}
+      🤖 <b>Автобан:</b> ${banAutoTime}
 
-      <b>Сообщений:</b> ${messages}
-      <b>Актив:</b> ${active}%
-      <b>Флуд:</b> ${flood}%
+      💬 <b>Сообщений:</b> ${messages}
+      📈 <b>Актив:</b> ${active}%
+      🌊 <b>Флуд:</b> ${flood}%
 
-      <b>Впервые был замечен:</b> ${createdAt}
+      📅 <b>Тут с:</b> ${createdAt}
     error:
       blocked: |
-        <b>Ошибка!</b>
-        Я не могу тебе писать в ЛС, напиши мне для начала.
+        Не могу написать тебе в личку 😅
+        Напиши мне первым, и тогда попробуй снова.
   top:
     info: |
-      Топ по активности в чате <b>${chatName}</b>:
+      🏆 Топ активных в <b>${chatName}</b>:
       ${top}
   top_banan:
     info: |
-      Топ 🍌 в чате <b>${chatName}</b>:
+      🍌 Топ по бананам в <b>${chatName}</b>:
       ${top}
     error:
-      empty: В этой группе пока никто не получал 🍌
+      empty: Тут ещё никто не получал 🍌
   extras:
     list: |
-      <b>extra's чата:</b>
+      📝 <b>Extra команды:</b>
       ${extras}
     error:
       not_found: |
-        У этой группы нет extra.
-        Для создания администратор должен написать <code>!extra</code>
+        Пока нет extra команд.
+        Админ может создать: <code>!extra название</code>
   ping:
       pong: |
-        🏓 Pong
-        <b>Ответ сервера:</b> ${sms} мс
-        <b>Ответ telegram:</b> ${tms} мс
-        <b>Бот работает:</b> ${workTime}
+        🏓 Pong!
+        <b>Сервер:</b> ${sms} мс
+        <b>Telegram:</b> ${tms} мс
+        <b>Аптайм:</b> ${workTime}
 
         ${extra}
       delay: |
-        ❗️ <b>Бот не работал:</b> ${delayTime}
+        ❗️ <b>Бот был офлайн:</b> ${delayTime}
   welcome:
-    disable: Приветствия выключены
-    enable: Приветствия включены
+    disable: Приветствия выключены 👋
+    enable: Приветствия включены 👋
   gif:
-    push: Gif успешно добавлен в список приветствий
-    pull: Gif успешно удален из списка приветствий
-    reset: Список gif очищен
+    push: Gif добавлен ✓
+    pull: Gif удалён ✓
+    reset: Все gif очищены ✓
   text:
-    push: Текст успешно добавлен в список приветствий
-    pull: Текст успешно удален из списка приветствий
-    error: Ошибка, текст не содержит <code>%name%</code>
-    reset: Список текстов очищен
+    push: Текст добавлен ✓
+    pull: Текст удалён ✓
+    error: Текст должен содержать <code>%name%</code>
+    reset: Все тексты очищены ✓
   extra:
-    push: \#${extraName} успешно сохранено
-    pull: \#${extraName} успешно удалено
-    max: Максимальное количество extra в сообщении установлено на <b>${maxExtra}</b>
+    push: \#${extraName} сохранено ✓
+    pull: \#${extraName} удалено ✓
+    max: Максимум extra в сообщении — <b>${maxExtra}</b>
     error:
       not_found: |
-        <b>Ошибка!</b>
-        extra c именем \#${extraName} не найдено.
-        Для создания новой введите команду повторно в ответ на сообщение.
+        \#${extraName} не найдено.
+        Чтобы создать — напиши команду в ответ на сообщение.
     set:
   members:
     member: |
       <a href="tg://user?id=${telegram_id}">${telegram_id}</a>
       ${banTime} | a: ${active} | f: ${flood}
   quote: |
-    Для создания цитат используйте бота @QuotLyBot
+    Для цитат юзай @QuotLyBot
   cas:
-    disable: CAS Ban выключен
-    enable: CAS Ban включен
+    disable: CAS выключен
+    enable: CAS включен
   banChannel:
-    disable: Ban Channel выключен
-    enable: Ban Channel включен
+    disable: Бан каналов выключен
+    enable: Бан каналов включен
   spam_settings:
-    enabled: "✅ <b>Автоматическая проверка на спам включена</b>"
-    disabled: "❌ <b>Автоматическая проверка на спам выключена</b>"
+    enabled: "✅ <b>Антиспам включен</b>"
+    disabled: "❌ <b>Антиспам выключен</b>"
     allow:
-      added: "✅ <b>Добавлено правило разрешения:</b>\n\"${rule}\""
-      error: "❌ <b>Ошибка:</b> Укажите текст правила\n\n<b>Пример:</b> <code>!spam allow продажа курсовых</code>"
+      added: "✅ Разрешено: \"${rule}\""
+      error: "❌ Укажи текст правила\n\n<b>Пример:</b> <code>!spam allow продажа курсовых</code>"
     deny:
-      added: "✅ <b>Добавлено правило запрета:</b>\n\"${rule}\""
-      error: "❌ <b>Ошибка:</b> Укажите текст правила\n\n<b>Пример:</b> <code>!spam deny реклама заработка</code>"
+      added: "✅ Запрещено: \"${rule}\""
+      error: "❌ Укажи текст правила\n\n<b>Пример:</b> <code>!spam deny реклама заработка</code>"
     remove:
-      success: "✅ <b>Удалено правило:</b>\n\"${rule}\""
-      error: "❌ <b>Ошибка:</b> Неверный номер правила\n\nИспользуйте <code>!spam</code> чтобы увидеть список правил"
-    clear: "✅ <b>Очищены все правила</b> (было: ${count})"
+      success: "✅ Правило удалено: \"${rule}\""
+      error: "❌ Неверный номер правила\n\nГлянь список: <code>!spam</code>"
+    clear: "✅ Правила очищены (было: ${count})"
     globalban:
-      enabled: "✅ <b>Глобальный бан включен</b>\n• Пользователи, заблокированные ИИ в этой группе, будут заблокированы во всех других группах\n• Пользователи, заблокированные ИИ в других группах, будут заблокированы в этой группе"
-      disabled: "❌ <b>Глобальный бан выключен</b>\n• Пользователи, заблокированные ИИ в этой группе, НЕ будут заблокированы в других группах\n• Пользователи, заблокированные ИИ в других группах, НЕ будут заблокированы в этой группе"
-      error: "❌ <b>Ошибка:</b> Используйте <code>!spam globalban on</code> или <code>!spam globalban off</code>"
+      enabled: "✅ <b>Глобальный бан включен</b>\nСпамеры из других групп тоже будут забанены тут"
+      disabled: "❌ <b>Глобальный бан выключен</b>\nБаны действуют только в этой группе"
+      error: "Юзай <code>!spam globalban on</code> или <code>!spam globalban off</code>"
     status:
-      title: "🛡 <b>Настройки автоматической проверки на спам</b>"
+      title: "🛡 <b>Настройки антиспама</b>"
       enabled_text: "✅ Включено"
       disabled_text: "❌ Выключено"
-      globalban_enabled: "✅ Включен"
-      globalban_disabled: "❌ Выключен"
+      globalban_enabled: "✅ Да"
+      globalban_disabled: "❌ Нет"
       rules_title: "Правила (${count}):"
       rules_empty: "Не настроено"
-      rule_allow: "✅ Разрешение"
-      rule_deny: "❌ Запрет"
-      commands_title: "Доступные команды:"
+      rule_allow: "✅ Разрешить"
+      rule_deny: "❌ Запретить"
+      commands_title: "Команды:"
       trusted_users: "юзеров"
       commands: |
-        <code>!spam on</code> - включить
-        <code>!spam off</code> - выключить
-        <code>!spam globalban on/off</code> - глобальный бан
-        <code>!spam trust</code> - доверять (в ответ)
-        <code>!spam untrust</code> - не доверять (в ответ)
-        <code>!spam allow текст</code> - разрешить
-        <code>!spam deny текст</code> - запретить
-        <code>!spam remove N</code> - удалить правило
-        <code>!spam clear</code> - очистить правила
+        <code>!spam on</code> — включить
+        <code>!spam off</code> — выключить
+        <code>!spam globalban on/off</code> — глобальный бан
+        <code>!spam trust</code> — доверять (в ответ)
+        <code>!spam untrust</code> — не доверять (в ответ)
+        <code>!spam allow текст</code> — разрешить
+        <code>!spam deny текст</code> — запретить
+        <code>!spam remove N</code> — удалить правило
+        <code>!spam clear</code> — очистить всё
     trust:
-      usage: "📝 <b>Как использовать:</b>\n• В ответ: <code>!spam trust</code>\n• По юзернейму: <code>!spam trust @username</code>\n• По ID: <code>!spam trust 123456</code>"
+      usage: "📝 <b>Как юзать:</b>\n• В ответ: <code>!spam trust</code>\n• По юзернейму: <code>!spam trust @username</code>\n• По ID: <code>!spam trust 123456</code>"
       cant_trust_bot: "🤖 Ботов нельзя"
       already_trusted: "✅ ${name} уже в доверенных"
-      added: "✅ <b>${name}</b> добавлен в доверенные"
-      user_not_found: "❌ Юзер ${username} не найден"
+      added: "✅ ${name} теперь в доверенных"
+      user_not_found: "❌ Не нашёл ${username}"
     untrust:
-      usage: "📝 <b>Как использовать:</b>\n• В ответ: <code>!spam untrust</code>\n• По юзернейму: <code>!spam untrust @username</code>\n• По ID: <code>!spam untrust 123456</code>"
-      not_trusted: "❌ ${name} не в доверенных"
-      removed: "✅ <b>${name}</b> убран из доверенных"
-      user_not_found: "❌ Юзер ${username} не найден"
-  reset: Настройки были сброшены
+      usage: "📝 <b>Как юзать:</b>\n• В ответ: <code>!spam untrust</code>\n• По юзернейму: <code>!spam untrust @username</code>\n• По ID: <code>!spam untrust 123456</code>"
+      not_trusted: "❌ ${name} и так не в доверенных"
+      removed: "✅ ${name} больше не в доверенных"
+      user_not_found: "❌ Не нашёл ${username}"
+  reset: Настройки сброшены ✓
 settings:
     json:
-      reset: Настройки были успешно восстановлены из файла
+      reset: Настройки восстановлены из файла ✓
 banan:
   show: ${name} показывает 🍌
-  suc:  ${name} получает 🍌\n<b>Срок:</b> ${duration}
-  pick: ${name} лишается 🍌\n
-  error: <b>У меня не получилось выдать 🍌</b>\n<pre>${error}</pre>
+  suc:  ${name} получает 🍌\n<b>На:</b> ${duration}
+  pick: ${name} лишился 🍌
+  error: <b>Не получилось выдать 🍌</b>\n<pre>${error}</pre>
 kick:
-  suc: ${name} получает пинок
-  who: Кого пнуть?😡
-  error: <b>У меня не получилось пнуть</b>\n<pre>${error}</pre>
+  suc: ${name} вылетает из чата 👢
+  who: Кого кикнуть? 🤔
+  error: <b>Не получилось кикнуть</b>\n<pre>${error}</pre>
+del:
+  error: <b>Не получилось удалить</b>\n<pre>${error}</pre>
 sticker:
   save:
-    suc: Стикер успешно добавлен в <a href="${link}">стикерпак группы</a>.
+    suc: Стикер добавлен в <a href="${link}">стикерпак группы</a> ✓
     error:
-      animated: Я не могу добавить анимированный стикер.
-      telegram: <b>У меня не получилось сохранить этот стикер.</b>\n<pre>${error}</pre>
+      animated: Анимированные стикеры не поддерживаются 😅
+      telegram: <b>Не получилось сохранить стикер</b>\n<pre>${error}</pre>
   delete:
-    suc: Стикер успешно удален из <a href="${link}">стикерпака группы</a>.
+    suc: Стикер удалён из <a href="${link}">стикерпака</a> ✓
     error:
-      telegram: <b>У меня не получилось удалить этот стикер.</b>\n<pre>${error}</pre>
+      telegram: <b>Не получилось удалить стикер</b>\n<pre>${error}</pre>
   empty_forward: |
-    Команду необходимо писать в ответ на сообщение со стикером, фото или файлом фото.
+    Напиши команду в ответ на стикер, фото или файл.
   only_admin: |
-      Команду может использовать только администратор группы.
-      Для сохранения стикерпака в личный стикерпак перешли сообщение боту @fStikBot
-del:
-  error: <b>У меня не получилось удалить сообщение</b>\n<pre>${error}</pre>
+    Только для админов.
+    Для личного стикерпака — @fStikBot
 cas:
   banned: |
-    ${name} был заблокирован в группе, так как имеет CAS ban.
-
+    ${name} забанен — есть в базе CAS.
     <a href="${link}">Подробнее</a>
 
-only_group: Эта команда доступна только в группах
-only_admin: Команду может использовать только администратор группы.
+only_group: Только в группе
+only_admin: Только для админов
 
 global_ban:
-  kicked: "Пользователь ${name} был исключен, так как он глобально забанен ИИ. Причина: ${reason}"
+  kicked: "🚫 ${name} исключён — глобальный бан. Причина: ${reason}"
 
 report:
-  only_group: "⚠️ Работает только в группах"
-  need_reply: "↩️ Ответь на сообщение, которое хочешь проверить"
-  cant_report_bot: "🤖 Ботов не проверяем"
-  cant_report_self: "🙃 Себя нельзя"
-  cant_report_admin: "👮 Админов нельзя"
-  invalid_target: "❌ Не удалось определить отправителя"
-  rate_limited: "⏳ Слишком много репортов. Подожди ${seconds}с"
-  spam_check_disabled: "❌ Проверка выключена в этой группе"
-  no_content: "📭 Нет текста для анализа"
+  only_group: "⚠️ Только в группах"
+  need_reply: "↩️ Ответь на сообщение"
+  cant_report_bot: "🤖 Это бот"
+  cant_report_self: "🙃 Сам на себя?"
+  cant_report_admin: "👮 Это админ"
+  invalid_target: "❌ Не могу определить автора"
+  rate_limited: "⏳ Подожди ${seconds}с"
+  spam_check_disabled: "❌ Антиспам выключен"
+  no_content: "📭 Нет текста для проверки"
   analyzing: "🔍 Проверяю..."
   spam_found: |
     🚨 <b>Спам!</b>
 
     👤 ${target}
-    📊 Уверенность: ${confidence}%
+    📊 ${confidence}%
     📝 ${reason}
 
     ✅ ${action}
 
-    <i>Репорт от ${reporter}</i>
+    <i>Репорт: ${reporter}</i>
   suspicious: |
     ⚠️ <b>Подозрительно</b>
 
     👤 ${target}
-    📊 Уверенность: ${confidence}%
+    📊 ${confidence}%
     📝 ${reason}
 
-    <i>Действий не предпринято. Админы уведомлены.</i>
-    <i>Репорт от ${reporter}</i>
+    <i>Админы уведомлены</i>
+    <i>Репорт: ${reporter}</i>
   clean: |
     ✅ <b>Чисто</b>
 
     👤 ${target}
-    📊 Уверенность: ${confidence}%
+    📊 ${confidence}%
 
-    <i>Проверил ${reporter}</i>
-  error: "❌ Ошибка. Попробуй позже."
+    <i>Проверил: ${reporter}</i>
+  error: "❌ Что-то пошло не так, попробуй позже"
