--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -1,25 +1,25 @@
 private:
   start: |
-    Привіт, <b>${name}</b>!
+    Йо, <b>${name}</b>! 👋
 
-    <b>LyAdminBot</b> — бот з ШІ модерацією для твоєї групи.
+    <b>LyAdminBot</b> — твій помічник для модерації групи.
 
-    🤖 <b>ШІ автоматично видаляє:</b>
-    • Спам та рекламу
-    • Скам та шахрайство
-    • Підозрілі посилання
+    🛡 <b>Що вмію:</b>
+    • Ловлю спам та рекламу
+    • Банню шахраїв
+    • Чищу підозрілі посилання
 
-    Просто додай в групу і зроби адміном — все працює автоматично.
+    Додай мене в групу і дай права адміна — далі сам розберусь.
 
-    /help — всі команди
+    /help — список команд
   btn_add: Додати в групу
 cmd:
   help: |
     🤖 <b>LyAdminBot</b>
 
-    <b>ШІ МОДЕРАЦІЯ:</b>
-    <code>!spam</code> — налаштування ШІ фільтра
-    <code>!spam on/off</code> — увімкнути/вимкнути
+    <b>АНТИСПАМ:</b>
+    <code>!spam</code> — налаштування
+    <code>!spam on/off</code> — вкл/викл
     <code>!spam globalban on/off</code> — глобальний бан
     <code>!cas</code> — CAS захист
     <code>!banChannel</code> — бан каналів
@@ -29,7 +29,7 @@ cmd:
     /report або @admin — перевірити на спам (у відповідь)
 
     <b>СТАТИСТИКА:</b>
-    /mystats — твоя статистика
+    /mystats — твоя стата
     /top — топ активних  •  /top_banan — топ банів
 
     <b>ПРИВІТАННЯ:</b>
@@ -40,218 +40,216 @@ cmd:
     <code>!extra назва</code> — швидкі команди #назва
     /extras — список  •  /lang — мова  •  /ping — статус
   my_stats:
-    send_pm: Статистика відправлена в ПП
+    send_pm: Стату скинув в особисті 📊
     chat: |
-      📊 Статистика ${name} в чаті <b>${chatName}</b>:
+      📊 Стата ${name} в <b>${chatName}</b>:
 
-      <b>Кількість бананів:</b> ${banCount} 🍌
-      <b>Загальний час бана:</b> ${banTime}
-      <b>Автобан:</b> ${banAutoTime}
+      🍌 <b>Бананів:</b> ${banCount}
+      ⏱ <b>Всього в бані:</b> ${banTime}
+      🤖 <b>Автобан:</b> ${banAutoTime}
 
-      <b>Повідомлень:</b> ${messages}
-      <b>Актив:</b> ${active}%
-      <b>Флуд:</b> ${flood}%
+      💬 <b>Повідомлень:</b> ${messages}
+      📈 <b>Актив:</b> ${active}%
+      🌊 <b>Флуд:</b> ${flood}%
 
-      <b>Вперше був помічений:</b> ${createdAt}
+      📅 <b>Тут з:</b> ${createdAt}
     error:
       blocked: |
-        <b>Помилка!</b>
-        Я не можу писати тобі в ПП, напиши мені спочатку.
+        Не можу написати тобі в особисті 😅
+        Напиши мені першим, і тоді спробуй знову.
   top:
     info: |
-      Топ за активністю в чаті <b>${chatName}</b>:
+      🏆 Топ активних в <b>${chatName}</b>:
       ${top}
   top_banan:
     info: |
-      Топ 🍌 у чаті <b>${chatName}</b>:
+      🍌 Топ по бананах в <b>${chatName}</b>:
       ${top}
     error:
-      empty: У цій групі поки що ніхто не отримував 🍌
+      empty: Тут ще ніхто не отримував 🍌
   extras:
     list: |
-      <b>extra's чата:</b>
+      📝 <b>Extra команди:</b>
       ${extras}
     error:
       not_found: |
-        У цієї групи немає extra.
-        Щоб створити, адміністратор повинен написати <code>!extra</code>
+        Поки що немає extra команд.
+        Адмін може створити: <code>!extra назва</code>
   ping:
       pong: |
-        🏓 Pong
-        <b>Відповідь сервера:</b> ${sms} мс
-        <b>Відповідь telegram:</b> ${tms} мс
-        <b>Бот працює:</b> ${workTime}
+        🏓 Pong!
+        <b>Сервер:</b> ${sms} мс
+        <b>Telegram:</b> ${tms} мс
+        <b>Аптайм:</b> ${workTime}
 
         ${extra}
       delay: |
-        ❗️ <b>Бот не працював:</b> ${delayTime}
+        ❗️ <b>Бот був офлайн:</b> ${delayTime}
   welcome:
-    disable: Привітання вимкнені
-    enable: Привітання увімкнені
+    disable: Привітання вимкнено 👋
+    enable: Привітання увімкнено 👋
   gif:
-    push: Gif успішно добавлений в список привітань
-    pull: Gif успішно видалений зі списку привітань
-    reset: Список gif очищений
+    push: Gif додано ✓
+    pull: Gif видалено ✓
+    reset: Всі gif очищено ✓
   text:
-    push: Текст успішно добавлений в список привітань
-    pull: Текст успішно видалений зі списку привітань
-    error: Помилка, текст не містить <code>%name%</code>
-    reset: Список текстів очищений
+    push: Текст додано ✓
+    pull: Текст видалено ✓
+    error: Текст має містити <code>%name%</code>
+    reset: Всі тексти очищено ✓
   extra:
-    push: \#${extraName} успішно збережено
-    pull: \#${extraName} успішно видалено
-    max: Максимальна кількість extra в повідомленні встановлена на <b>${maxExtra}</b>
+    push: \#${extraName} збережено ✓
+    pull: \#${extraName} видалено ✓
+    max: Максимум extra в повідомленні — <b>${maxExtra}</b>
     error:
       not_found: |
-        <b>Помилка!</b>
-        extra з назвою \#${extraName} не знайдено.
-        Для створення нової введіть команду повторно у відповідь на повідомлення.
+        \#${extraName} не знайдено.
+        Щоб створити — напиши команду у відповідь на повідомлення.
   members:
     member: |
       <a href="tg://user?id=${telegram_id}">${telegram_id}</a>
       ${banTime} | a: ${active} | f: ${flood}
   quote: |
-    Для створення цитат використовуйте бота @QuotLyBot
+    Для цитат юзай @QuotLyBot
   cas:
-    disable: CAS Ban вимкнено
-    enable: CAS Ban увімкнено
+    disable: CAS вимкнено
+    enable: CAS увімкнено
   banChannel:
-    disable: Ban Channel вимкнено
-    enable: Ban Channel увімкнено
+    disable: Бан каналів вимкнено
+    enable: Бан каналів увімкнено
   spam_settings:
-    enabled: "✅ <b>Автоматичну перевірку на спам увімкнено</b>"
-    disabled: "❌ <b>Автоматичну перевірку на спам вимкнено</b>"
+    enabled: "✅ <b>Антиспам увімкнено</b>"
+    disabled: "❌ <b>Антиспам вимкнено</b>"
     allow:
-      added: "✅ <b>Додано правило дозволу:</b>\n\"${rule}\""
-      error: "❌ <b>Помилка:</b> Вкажіть текст правила\n\n<b>Приклад:</b> <code>!spam allow продаж курсових робіт</code>"
+      added: "✅ Дозволено: \"${rule}\""
+      error: "❌ Вкажи текст правила\n\n<b>Приклад:</b> <code>!spam allow продаж курсових</code>"
     deny:
-      added: "✅ <b>Додано правило заборони:</b>\n\"${rule}\""
-      error: "❌ <b>Помилка:</b> Вкажіть текст правила\n\n<b>Приклад:</b> <code>!spam deny реклама заробітку</code>"
+      added: "✅ Заборонено: \"${rule}\""
+      error: "❌ Вкажи текст правила\n\n<b>Приклад:</b> <code>!spam deny реклама заробітку</code>"
     remove:
-      success: "✅ <b>Видалено правило:</b>\n\"${rule}\""
-      error: "❌ <b>Помилка:</b> Невірний номер правила\n\nВикористайте <code>!spam</code> щоб побачити список правил"
-    clear: "✅ <b>Очищено всі правила</b> (було: ${count})"
+      success: "✅ Правило видалено: \"${rule}\""
+      error: "❌ Невірний номер правила\n\nГлянь список: <code>!spam</code>"
+    clear: "✅ Правила очищено (було: ${count})"
     globalban:
-      enabled: "✅ <b>Глобальний бан увімкнено</b>\n• Користувачі, заблоковані ШІ в цій групі, будуть заблоковані в усіх інших групах\n• Користувачі, заблоковані ШІ в інших групах, будуть заблоковані в цій групі"
-      disabled: "❌ <b>Глобальний бан вимкнено</b>\n• Користувачі, заблоковані ШІ в цій групі, НЕ будуть заблоковані в інших групах\n• Користувачі, заблоковані ШІ в інших групах, НЕ будуть заблоковані в цій групі"
-      error: "❌ <b>Помилка:</b> Використайте <code>!spam globalban on</code> або <code>!spam globalban off</code>"
+      enabled: "✅ <b>Глобальний бан увімкнено</b>\nСпамери з інших груп теж будуть забанені тут"
+      disabled: "❌ <b>Глобальний бан вимкнено</b>\nБани діють тільки в цій групі"
+      error: "Юзай <code>!spam globalban on</code> або <code>!spam globalban off</code>"
     status:
-      title: "🛡 <b>Налаштування автоматичної перевірки на спам</b>"
+      title: "🛡 <b>Налаштування антиспаму</b>"
       enabled_text: "✅ Увімкнено"
       disabled_text: "❌ Вимкнено"
-      globalban_enabled: "✅ Увімкнено"
-      globalban_disabled: "❌ Вимкнено"
+      globalban_enabled: "✅ Так"
+      globalban_disabled: "❌ Ні"
       rules_title: "Правила (${count}):"
       rules_empty: "Не налаштовано"
-      rule_allow: "✅ Дозвіл"
-      rule_deny: "❌ Заборона"
-      commands_title: "Доступні команди:"
+      rule_allow: "✅ Дозволити"
+      rule_deny: "❌ Заборонити"
+      commands_title: "Команди:"
       trusted_users: "юзерів"
       commands: |
-        <code>!spam on</code> - увімкнути
-        <code>!spam off</code> - вимкнути
-        <code>!spam globalban on/off</code> - глобальний бан
-        <code>!spam trust</code> - довіряти (у відповідь)
-        <code>!spam untrust</code> - не довіряти (у відповідь)
-        <code>!spam allow текст</code> - дозволити
-        <code>!spam deny текст</code> - заборонити
-        <code>!spam remove N</code> - видалити правило
-        <code>!spam clear</code> - очистити правила
+        <code>!spam on</code> — увімкнути
+        <code>!spam off</code> — вимкнути
+        <code>!spam globalban on/off</code> — глобальний бан
+        <code>!spam trust</code> — довіряти (у відповідь)
+        <code>!spam untrust</code> — не довіряти (у відповідь)
+        <code>!spam allow текст</code> — дозволити
+        <code>!spam deny текст</code> — заборонити
+        <code>!spam remove N</code> — видалити правило
+        <code>!spam clear</code> — очистити все
     trust:
-      usage: "📝 <b>Як використовувати:</b>\n• У відповідь: <code>!spam trust</code>\n• По юзернейму: <code>!spam trust @username</code>\n• По ID: <code>!spam trust 123456</code>"
+      usage: "📝 <b>Як юзати:</b>\n• У відповідь: <code>!spam trust</code>\n• По юзернейму: <code>!spam trust @username</code>\n• По ID: <code>!spam trust 123456</code>"
       cant_trust_bot: "🤖 Ботів не можна"
       already_trusted: "✅ ${name} вже в довірених"
-      added: "✅ <b>${name}</b> додано в довірені"
-      user_not_found: "❌ Юзер ${username} не знайдений"
+      added: "✅ ${name} тепер в довірених"
+      user_not_found: "❌ Не знайшов ${username}"
     untrust:
-      usage: "📝 <b>Як використовувати:</b>\n• У відповідь: <code>!spam untrust</code>\n• По юзернейму: <code>!spam untrust @username</code>\n• По ID: <code>!spam untrust 123456</code>"
-      not_trusted: "❌ ${name} не в довірених"
-      removed: "✅ <b>${name}</b> прибрано з довірених"
-      user_not_found: "❌ Юзер ${username} не знайдений"
-  reset: Налаштування були скинуті
+      usage: "📝 <b>Як юзати:</b>\n• У відповідь: <code>!spam untrust</code>\n• По юзернейму: <code>!spam untrust @username</code>\n• По ID: <code>!spam untrust 123456</code>"
+      not_trusted: "❌ ${name} і так не в довірених"
+      removed: "✅ ${name} більше не в довірених"
+      user_not_found: "❌ Не знайшов ${username}"
+  reset: Налаштування скинуто ✓
 settings:
     json:
-      reset: Налаштування були успішно відновлені з файлу
+      reset: Налаштування відновлено з файлу ✓
 banan:
   show: ${name} показує 🍌
-  suc:  ${name} отримує 🍌\n<b>Термін:</b> ${duration}
-  pick: ${name} позбавляється 🍌\n
-  error: <b>У мене не виходить видати 🍌</b>\n<pre>${error}</pre>
+  suc:  ${name} отримує 🍌\n<b>На:</b> ${duration}
+  pick: ${name} позбувся 🍌
+  error: <b>Не вийшло видати 🍌</b>\n<pre>${error}</pre>
 kick:
-  suc: ${name} отримує стусана
-  who: Кого виштовхнути?😡
-  error: <b>У мене не вийшло виштовхнув</b>\n<pre>${error}</pre>
+  suc: ${name} вилітає з чату 👢
+  who: Кого кікнути? 🤔
+  error: <b>Не вийшло кікнути</b>\n<pre>${error}</pre>
 del:
-  error: <b>У мене не вийшло видалити повідомлення</b>\n<pre>${error}</pre>
+  error: <b>Не вийшло видалити</b>\n<pre>${error}</pre>
 sticker:
   save:
-    suc: Стікер успішно доданий до <a href="${link}">групового стікерпаку</a>.
+    suc: Стікер додано до <a href="${link}">стікерпаку групи</a> ✓
     error:
-      animated: Я не можу додати анімований стікер.
-      telegram: <b>Я не зміг зберегти цей стікер.</b>\n<pre>${error}</pre>
+      animated: Анімовані стікери не підтримуються 😅
+      telegram: <b>Не вийшло зберегти стікер</b>\n<pre>${error}</pre>
   delete:
-    suc: Стікер успішно видалений з <a href="${link}">групового стікерпаку</a>.
+    suc: Стікер видалено з <a href="${link}">стікерпаку</a> ✓
     error:
-      telegram: <b>Я не зміг видалити цей стікер.</b>\n<pre>${error}</pre>
+      telegram: <b>Не вийшло видалити стікер</b>\n<pre>${error}</pre>
   empty_forward: |
-    Команду потрібно писати у відповідь на повідомлення зі стікером, фотографією або файлом фотографії.
+    Напиши команду у відповідь на стікер, фото або файл.
   only_admin: |
-    Команду може використовувати тільки адміністратор групи.
-    Щоб зберегти стікерпак в особистий стікерпак, перешліть повідомлення боту @fStikBot
+    Тільки для адмінів.
+    Для особистого стікерпаку — @fStikBot
 cas:
   banned: |
-    ${name} був забанений в групі, тому що має CAS бан.
-
+    ${name} забанено — є в базі CAS.
     <a href="${link}">Детальніше</a>
 spam:
   banned: |
-    ${name} був забанений назавжди.
+    🚫 ${name} забанено назавжди.
     Причина: ${reason}
   muted: |
-    ${name} був заглушений на 24 години.
+    🔇 ${name} замучено на 24 години.
     Причина: ${reason}
 
-only_group: Ця команда доступна тільки в групі
-only_admin: Цю команду може використовувати тільки адміністратор групи
+only_group: Тільки в групі
+only_admin: Тільки для адмінів
 
 global_ban:
-  kicked: "Користувача ${name} було вилучено, оскільки він глобально забанений ШІ. Причина: ${reason}"
+  kicked: "🚫 ${name} вилучено — глобальний бан. Причина: ${reason}"
 
 report:
-  only_group: "⚠️ Працює тільки в групах"
-  need_reply: "↩️ Відповідай на повідомлення, яке хочеш перевірити"
-  cant_report_bot: "🤖 Ботів не перевіряємо"
-  cant_report_self: "🙃 Себе не можна"
-  cant_report_admin: "👮 Адмінів не можна"
-  invalid_target: "❌ Не вдалося визначити відправника"
-  rate_limited: "⏳ Забагато репортів. Почекай ${seconds}с"
-  spam_check_disabled: "❌ Перевірка вимкнена в цій групі"
-  no_content: "📭 Нема тексту для аналізу"
+  only_group: "⚠️ Тільки в групах"
+  need_reply: "↩️ Відповідай на повідомлення"
+  cant_report_bot: "🤖 Це бот"
+  cant_report_self: "🙃 Сам на себе?"
+  cant_report_admin: "👮 Це адмін"
+  invalid_target: "❌ Не можу визначити автора"
+  rate_limited: "⏳ Зачекай ${seconds}с"
+  spam_check_disabled: "❌ Антиспам вимкнено"
+  no_content: "📭 Немає тексту для перевірки"
   analyzing: "🔍 Перевіряю..."
   spam_found: |
     🚨 <b>Спам!</b>
 
     👤 ${target}
-    📊 Впевненість: ${confidence}%
+    📊 ${confidence}%
     📝 ${reason}
 
     ✅ ${action}
 
-    <i>Репорт від ${reporter}</i>
+    <i>Репорт: ${reporter}</i>
   suspicious: |
     ⚠️ <b>Підозріло</b>
 
     👤 ${target}
-    📊 Впевненість: ${confidence}%
+    📊 ${confidence}%
     📝 ${reason}
 
-    <i>Дій не вжито. Адмінів повідомлено.</i>
-    <i>Репорт від ${reporter}</i>
+    <i>Адмінів повідомлено</i>
+    <i>Репорт: ${reporter}</i>
   clean: |
     ✅ <b>Чисто</b>
 
     👤 ${target}
-    📊 Впевненість: ${confidence}%
+    📊 ${confidence}%
 
-    <i>Перевірив ${reporter}</i>
-  error: "❌ Помилка. Спробуй пізніше."
+    <i>Перевірив: ${reporter}</i>
+  error: "❌ Щось пішло не так, спробуй пізніше"
