--- a/locales/tr.yaml
+++ b/locales/tr.yaml
@@ -1,107 +1,117 @@
 private:
   start: |
-    Merhaba, <b>${name}</b>!
-    Grubu yönetmene yardım edeceğim.
-    Beni gruba ekle.
+    Selam <b>${name}</b>! 👋
 
-    /help - yardım
+    <b>LyAdminBot</b> — grup moderasyon yardımcın.
 
-    <b>👨🏻‍💻 Daha fazla bilgi için buraya bakın:</b> @LyBlog
-  btn_add: Gruba Ekle
+    🛡 <b>Neler yapıyorum:</b>
+    • Spam ve reklamları yakalıyorum
+    • Dolandırıcıları banlıyorum
+    • Şüpheli linkleri temizliyorum
+
+    Beni gruba ekle ve admin yap — gerisini hallederim.
+
+    /help — komut listesi
+  btn_add: Gruba ekle
 cmd:
   help: |
-    Grupları yönetmeye yardım ediyorum.
+    🤖 <b>LyAdminBot</b>
 
-    <b>Komut listesi:</b>
-    /banan - Banı kaldır
-    /kick - gruptan at
-    /del - mesajı sil
-    /ping - botun çalışıp çalışmadığını test et
+    <b>ANTİ-SPAM:</b>
+    <code>!spam</code> — ayarlar
+    <code>!spam on/off</code> — aç/kapa
+    <code>!spam globalban on/off</code> — global ban
 
-    <code>!gif</code> - karşılama listesine gif ekle / kaldır
-    <code>!text</code> - karşılama listesine metin ekle / kaldır
-    <code>!reset</code> - grup ayarlarını sıfırla
+    <b>MODERASYON:</b>
+    /banan — ban  •  /kick — at  •  /del — sil
+    /ping — durum
 
-    <b>👨🏻‍💻 Daha fazla bilgi için buraya bakın:</b> @LyBlog
-    <b>GitHub:</b> github.com/LyoSU/LyAdminBot
-    Çeviri : @By_Azade
+    <b>İSTATİSTİKLER:</b>
+    /mystats — senin istatistiklerin
+    /top — en aktifler  •  /top_banan — en çok ban alanlar
+
+    <b>KARŞILAMA:</b>
+    <code>!welcome</code> — aç/kapa
+    <code>!gif</code> / <code>!text</code> — içerik ekle
+
+    <b>DİĞER:</b>
+    <code>!extra isim</code> — hızlı komutlar #isim
+    /extras — liste  •  /lang — dil
   ping:
       pong: |
-        🏓 Pong
-        <b>sunucu cevabı:</b> ${sms} ms
-        <b>telegram cevabı:</b> ${tms} ms
-        <b>Bu zamandan beri çalışıyor:</b> ${workTime}
+        🏓 Pong!
+        <b>Sunucu:</b> ${sms} ms
+        <b>Telegram:</b> ${tms} ms
+        <b>Çalışma süresi:</b> ${workTime}
 
         ${extra}
       delay: |
-        ❗️ <b>Bot çalışmıyor:</b> ${delayTime}
+        ❗️ <b>Bot çevrimdışıydı:</b> ${delayTime}
   welcome:
-    disable: Karşılama mesajı kapalı
-    enable: Karşılama mesajı açık
+    disable: Karşılama kapalı 👋
+    enable: Karşılama açık 👋
   gif:
-    push: Gif başarıyla karşılama listesine eklendi
-    pull: Gif başarıyla karşılama mesajından çıkarıldı
+    push: Gif eklendi ✓
+    pull: Gif silindi ✓
   text:
-    push: Metin karşılama listesine başarıyla eklendi
-    pull: Metin karşılama listesinden başarıyla çıkarıldı
-    error: Hata, metin içermiyor <code>%name%</code>
+    push: Metin eklendi ✓
+    pull: Metin silindi ✓
+    error: Metin <code>%name%</code> içermeli
   extra:
-    push: \#${extraName} başarıyla kaydedildi
-    pull: \#${extraName} başarıyla silindi
+    push: \#${extraName} kaydedildi ✓
+    pull: \#${extraName} silindi ✓
     error:
       not_found: |
-        <b>Hata!</b>
-        \#${extraName} bulunamadı
-        Yeni bir tane oluşturmak için iletiye yanıt olarak komutu yeniden yanıtlayın.
+        \#${extraName} bulunamadı.
+        Oluşturmak için — mesaja yanıt olarak komutu yaz.
   spam_settings:
-    enabled: "✅ <b>Otomatik spam kontrolü etkinleştirildi</b>"
-    disabled: "❌ <b>Otomatik spam kontrolü devre dışı bırakıldı</b>"
+    enabled: "✅ <b>Anti-spam açık</b>"
+    disabled: "❌ <b>Anti-spam kapalı</b>"
     allow:
-      added: "✅ <b>İzin kuralı eklendi:</b>\n\"${rule}\""
-      error: "❌ <b>Hata:</b> Kural metnini belirtin\n\n<b>Örnek:</b> <code>!spam allow ödev satışı</code>"
+      added: "✅ İzin verildi: \"${rule}\""
+      error: "❌ Kural metnini belirt\n\n<b>Örnek:</b> <code>!spam allow ödev satışı</code>"
     deny:
-      added: "✅ <b>Yasak kuralı eklendi:</b>\n\"${rule}\""
-      error: "❌ <b>Hata:</b> Kural metnini belirtin\n\n<b>Örnek:</b> <code>!spam deny kazanç reklamları</code>"
+      added: "✅ Yasaklandı: \"${rule}\""
+      error: "❌ Kural metnini belirt\n\n<b>Örnek:</b> <code>!spam deny kazanç reklamları</code>"
     remove:
-      success: "✅ <b>Kural silindi:</b>\n\"${rule}\""
-      error: "❌ <b>Hata:</b> Geçersiz kural numarası\n\nKural listesini görmek için <code>!spam</code> kullanın"
-    clear: "✅ <b>Tüm kurallar temizlendi</b> (vardı: ${count})"
+      success: "✅ Kural silindi: \"${rule}\""
+      error: "❌ Geçersiz kural numarası\n\nListeye bak: <code>!spam</code>"
+    clear: "✅ Kurallar temizlendi (eski: ${count})"
     globalban:
-      enabled: "✅ <b>Global yasak etkinleştirildi</b>\n• Bu grupta yapay zeka tarafından yasaklanan kullanıcılar diğer tüm gruplarda da yasaklanacak\n• Diğer gruplarda yapay zeka tarafından yasaklanan kullanıcılar bu grupta da yasaklanacak"
-      disabled: "❌ <b>Global yasak devre dışı bırakıldı</b>\n• Bu grupta yapay zeka tarafından yasaklanan kullanıcılar diğer gruplarda yasaklanmayacak\n• Diğer gruplarda yapay zeka tarafından yasaklanan kullanıcılar bu grupta yasaklanmayacak"
-      error: "❌ <b>Hata:</b> <code>!spam globalban on</code> veya <code>!spam globalban off</code> kullanın"
+      enabled: "✅ <b>Global ban açık</b>\nDiğer gruplardaki spamcılar burada da banlanacak"
+      disabled: "❌ <b>Global ban kapalı</b>\nBanlar sadece bu grupta geçerli"
+      error: "<code>!spam globalban on</code> veya <code>!spam globalban off</code> kullan"
     status:
-      title: "🛡 <b>Otomatik spam kontrolü ayarları</b>"
-      enabled_text: "✅ Etkin"
-      disabled_text: "❌ Devre dışı"
-      globalban_enabled: "✅ Etkin"
-      globalban_disabled: "❌ Devre dışı"
+      title: "🛡 <b>Anti-spam ayarları</b>"
+      enabled_text: "✅ Açık"
+      disabled_text: "❌ Kapalı"
+      globalban_enabled: "✅ Evet"
+      globalban_disabled: "❌ Hayır"
       rules_title: "Kurallar (${count}):"
-      rules_empty: "Yapılandırılmamış"
+      rules_empty: "Ayarlanmamış"
       rule_allow: "✅ İzin ver"
       rule_deny: "❌ Yasak"
-      commands_title: "Mevcut komutlar:"
+      commands_title: "Komutlar:"
       commands: |
-        <code>!spam on</code> - etkinleştir
-        <code>!spam off</code> - devre dışı bırak
-        <code>!spam globalban on</code> - global yasağı etkinleştir
-        <code>!spam globalban off</code> - global yasağı devre dışı bırak
-        <code>!spam allow metin</code> - izin ver
-        <code>!spam deny metin</code> - yasak
-        <code>!spam remove numara</code> - kuralı sil
-        <code>!spam clear</code> - tüm kuralları temizle
-  reset: Ayarlar sıfırlandı
+        <code>!spam on</code> — aç
+        <code>!spam off</code> — kapat
+        <code>!spam globalban on/off</code> — global ban
+        <code>!spam allow metin</code> — izin ver
+        <code>!spam deny metin</code> — yasak
+        <code>!spam remove numara</code> — kuralı sil
+        <code>!spam clear</code> — tüm kuralları temizle
+  reset: Ayarlar sıfırlandı ✓
 banan:
-  show: ${name} banlanan 🍌
-  suc:  ${name} banlanacak 🍌\n<b>Zamanı:</b> ${duration}
-  pick: ${name} banlandı 🍌\n
-  error: <b>Banlayamadım</b>\n<pre>${error}</pre>
+  show: ${name} 🍌 gösteriyor
+  suc:  ${name} 🍌 alıyor\n<b>Süre:</b> ${duration}
+  pick: ${name} 🍌 kaybetti
+  error: <b>🍌 veremedim</b>\n<pre>${error}</pre>
 kick:
-  suc: ${name} gruptan atıldı
-  who: Kim atılacak😡
+  suc: ${name} gruptan atıldı 👢
+  who: Kimi atayım? 🤔
   error: <b>Atamadım</b>\n<pre>${error}</pre>
 del:
-  error: <b>Mesajı silemedim</b>\n<pre>${error}</pre>
+  error: <b>Silemedim</b>\n<pre>${error}</pre>
 
 global_ban:
-  kicked: "Kullanıcı ${name} yapay zeka tarafından küresel olarak yasaklandığı için atıldı. Sebep: ${reason}"
+  kicked: "🚫 ${name} atıldı — global ban. Sebep: ${reason}"
